new implementation of AY38912